--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,11 +58,11 @@
      <Compile Include="Assets\Custom3PC.cs" />
      <Compile Include="Assets\Scripts\Attack.cs" />
      <Compile Include="Assets\Scripts\Build.cs" />
+     <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\CharacterControl.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\Entity.cs" />
      <Compile Include="Assets\Scripts\Health.cs" />
-     <Compile Include="Assets\Scripts\Interface\Bullet.cs" />
      <Compile Include="Assets\Scripts\Interface\CameraController.cs" />
      <Compile Include="Assets\Scripts\Projectile.cs" />
      <Compile Include="Assets\Scripts\Spawn.cs" />
